--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,2 +1,7 @@
-browser=chrome
+browser=SELENOID_CHROME
+#browser=chrome
 base.url=https://google.com
+#base.url=http://192.168.88.107
+selenoid.hub=http://192.168.88.51:4444/wd/hub
+
+implicitly.wait=10
